import "ads/bsyeti/big_rt/lib/processing/shard_processor/stateful/config/config.proto";
import "ads/bsyeti/big_rt/lib/consuming_system/config/config.proto";
import "ads/bsyeti/big_rt/lib/supplier/config/supplier_config.proto";

import "ads/bsyeti/libs/profiling/solomon/proto/config.proto";
import "ads/bsyeti/libs/ytex/http/proto/config.proto";
import "ads/bsyeti/libs/ytex/logging/proto/config.proto";

import "quality/user_sessions/rt/lib/common/protos/yt_client_config.proto";
import "quality/user_sessions/rt/lib/state_managers/proto/proto/config.proto";

package NAlice.NWonderlogs;

option java_package = "ru.yandex.alice.wonderlogs.rt.processors.uniproxy_creator.protos.config";

message TUniproxyCreatorConfig {
    message TProcessorConfig {
        message TUuidMessageId {
            optional uint64 ShardsCount = 1;
            optional string OutputQueue = 2;
            optional string OutputCodec = 3;
        }

        optional string OutputTable = 1;
        optional TUuidMessageId UuidMessageIdQueue = 11;
    }

    optional NBSYeti.NProfiling.TExporterConfig Exporter = 1;
    repeated NBigRT.TSupplierConfig Suppliers = 7;
    optional NBigRT.TConsumingSystemConfig ConsumingSystem = 8;
    optional NBigRT.TStatefulShardProcessorConfig StatefulShardProcessorConfig = 9;
    optional uint64 MaxInflightBytes = 11 [default = 1000000];
    optional uint32 SharedTransactionPeriod = 12;

    optional NUserSessions.NRT.TProtoStateManagerConfig ProtoStateManagerConfig = 16;

    optional NYTEx.NHttp.TServerConfig HttpServer = 18;
    optional NYTEx.NLogging.TConfig Logs = 19;
    optional TProcessorConfig ProcessorConfig = 20;

    optional NUserSessions.NRT.TYtClientConfig YtClientConfig = 21;
}
